--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -70,3 +70,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           release_id: ${{ steps.create_release.outputs.id }}
+  owasp-scan:
+    needs: [ build-job ]
+    uses: th2-net/.github/.github/workflows/owasp-gradle-scan.yml@main
